kubernetes/test/deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: test
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deploy-main
  namespace: test
  labels:
    app: nginx
spec:
  selector:
    matchLabels:
      app: nginx-main
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx-main
    spec:
      containers:
      - name: nginx
        image: nginx:latest
---
apiVersion: v1
kind: Service
metadata:
  name:  nginx-main-svc
  namespace: test
  labels:
    app: nginx-main
spec:
  # ---
  # ClusterIP means this service can be accessed by any pod in the cluster
  type:  ClusterIP
  ports:
  - name:  http
    port:  80
    targetPort: 80
    protocol: TCP
  # ---
  # NodePort means this service is only accessible by pods in the same namespace
  # type:  NodePort
  # ports:
  # - name:  http
  #   port:  80
  #   nodePort: 30001
  #   protocol: TCP  # optional protocol
  # ---
  # LoadBalancer means this service is load-balanced across all nodes in the cluster
  # type:  LoadBalancer
  selector:
    app:  nginx-main
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx-main
  namespace: test
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`nginx.local.elepnt.com`)
      kind: Rule
      services:
        - name: nginx-main-svc
          port: 80
  tls:
    # secretName: local-elepnt-com-tls
    secretName: local-elepnt-com-staging-tls
# ---
# apiVersion: traefik.containo.us/v1alpha1
# kind: IngressRoute
# metadata:
#   name: nginx-main
#   namespace: default
# spec:
#   entryPoints:
#     - web
#   routes:
#     - match: Host(`nginx.local.elepnt.com`)
#       kind: Rule
#       services:
#         - name: nginx-main-svc
#           port: 80
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: nginx1-ingress
#   namespace: nginx1
#   annotations:
#     kubernetes.io/ingress.class: traefik
#     traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
#     traefik.ingress.kubernetes.io/router.middlewares: nginx1-redirecttohttps@kubernetescrd
# spec:
#   rules:
#   - host: "nginx2.local.elepnt.com"
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: nginx1-svc 
#             port:
#               number: 80 
#   tls:
#   - hosts:
#     - nginx2.local.elepnt.com
#     secretName: nginx2-tls-secret
