kubernetes/test/nginx-deploy-green.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deploy-green
  namespace: test
  labels:
    app: nginx
spec:
  selector:
    matchLabels:
      app: nginx-green
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx-green
    spec:
      volumes:
      - name: webdata
        emptyDir: {}
      containers:
      - name: nginx
        image: nginx:latest
        name: nginx
        volumeMounts:
        - name: webdata
          mountPath: "/usr/share/nginx/html"
        # ports:
        # - containerPort: 80 # The port that your application uses
        # volumes:
        # - name: nfs
        #   persistentVolumeClaim:
        #     claimName: nfs
---
apiVersion: v1
kind: Service
metadata:
  name:  nginx-green-svc
  namespace: test
  labels:
    app: nginx-green
spec:
  # ---
  type:  ClusterIP
  # ClusterIP means this service can be accessed by any pod in the cluster
  ports:
  - name:  http
    port:  80
    targetPort: 80
    protocol: TCP
  # ---
  # type:  NodePort
  # NodePort means this service is only accessible by pods in the same namespace
  # ports:
  # - name:  http
  #   port:  80
  #   nodePort: 30001
  #   protocol: TCP  # optional protocol
  # ---
  # type:  LoadBalancer
  # LoadBalancer means this service is load-balanced across all nodes in the cluster
  selector:
    app:  nginx-green
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx-green
  namespace: test
  # annotations: 
  #   kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`green.local.elepnt.com`)
      kind: Rule
      services:
        - name: nginx-green-svc
          port: 80
  tls:
    secretName: local-elepnt-com-tls

# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: nginx1-ingress
#   namespace: nginx1
#   annotations:
#     kubernetes.io/ingress.class: traefik
#     traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
#     traefik.ingress.kubernetes.io/router.middlewares: nginx1-redirecttohttps@kubernetescrd
# spec:
#   rules:
#   - host: "nginx2.local.elepnt.com"
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: nginx1-svc 
#             port:
#               number: 80 
#   tls:
#   - hosts:
#     - nginx2.local.elepnt.com
#     secretName: nginx2-tls-secret
